fixed margin collapse issue with body

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,11 +1,2 @@
 .app-main
-    text-align: center
-    margin: 20vh
-    background: #fff
-    border: 1px solid #D7DADE
-    border-radius: 5px
-
-$breakpoint-tablet: 768px;
-@media (max-width: $breakpoint-tablet)
-    .app-main
-        margin: 20vh 15vh
+    border-bottom: 5px solid #00A7D1
