--- a/src/app/video-player/video-player.component.sass
+++ b/src/app/video-player/video-player.component.sass
@@ -1,5 +1,11 @@
 .video-player
     padding: 40px
+    text-align: center
+    margin: 20vh
+    background: #fff
+    border: 1px solid #D7DADE
+    border-radius: 5px
+
     .video-header
         font-size: 26px
         font-family: SFUIText-Regular
@@ -11,3 +17,8 @@
             background: #000000
             box-shadow: 0 0 8px 0 rgba(0,0,0,0.30)
             border-radius: 4px
+
+$breakpoint-tablet: 768px;
+@media (max-width: $breakpoint-tablet)
+    .app-main
+        margin: 20vh 15vh
