--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-html 
-    background-color: "#f7f7f7"
+body
+    margin: 0
+    position: absolute
+    height: 100vh
+    background-color: #f7f7f7
 
 @font-face
   font-family: SFUIText-Regular
